--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/social_network
 spring.datasource.username=root
-spring.datasource.password=namluty192
+spring.datasource.password=hungdaik98
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
